--- a/meta/main.yml
+++ b/meta/main.yml
@@ -6,7 +6,7 @@ galaxy_info:
   min_ansible_version: 1.2
 
   platforms:
-    - name: Raspbian
+    - name: Debian
       versions:
         - stretch
 
