--- a/files/radcontrold.service
+++ b/files/radcontrold.service
@@ -10,7 +10,7 @@ User=pi
 Group=pi
 SyslogIdentifier=radcontrold
 StandardOutput=syslog
-Restart=always
+Restart=on-failure
 KillSignal=SIGINT
 
 [Install]
