Be more specific about unit names; otherwise timer wouldn’t be enabled

--- a/tasks/radcontrold.yml
+++ b/tasks/radcontrold.yml
@@ -69,12 +69,11 @@
   systemd:
     enabled: yes
     state: started
-    name: radcontrold
+    name: radcontrold.service
     daemon_reload: yes
 
 - name: Enable systemd health check service
   systemd:
     enabled: yes
-    state: started
-    name: radcontrold_health_check
+    name: radcontrold_health_check.timer
     daemon_reload: yes
