--- a/files/radcontrold_health_check.service
+++ b/files/radcontrold_health_check.service
@@ -2,6 +2,7 @@
 Description=Radcontrold health check
 After=syslog.target network.target
 Documentation=https://github.com/davea/radcontrold
+OnFailure=status-email-root@%n.service
 
 [Service]
 ExecStart=/usr/local/bin/pipenv run python health_check.py
